# hook-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
hook-rs-derive/: Cargo.toml
hook-rs-derive/src/: generator.rs  lib.rs
hook-rs-lib/: Cargo.toml
hook-rs-lib/src/: lib.rs  signature_scan.rs
hook-rs-lib/src/hooks/: mod.rs  vtable.rs
