[package]
name = "hook-rs-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.99", features = ["full", "extra-traits"]}
proc-macro2 = "1.0.43"
darling = "0.14.1"
quote = "1.0.21"

[dev-dependencies]
hook-rs-lib = {path = "../hook-rs-lib"}