[package]
name = "hook-rs-lib"
version = "0.1.0"
edition = "2021"

[features]
derive = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hook-rs-derive = { path = "../hook-rs-derive"}
once_cell = "1.13.1"
log = "0.4.17"
winapi = { version = "0.3.9", features = ["ntdef", "psapi", "minwindef", "memoryapi", "minwinbase", "winnt", "ntstatus", "consoleapi"] }